# tulz

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  PDF_TOOLS_IMPLEMENTATION_PLAN.md  PDF_TOOLS_IMPLEMENTED.md  README.md  cleanup_pro.py  libredwg_latest.txt  monetization_roadmap.md  pdf_market_analysis.md  standardize_headers.py  test_compress.py  unbundling_strategy.md
backend/: .env.example  .gitignore  CELERY_SETUP.md  alembic.ini  create_admin.py  dummy.docx  dummy2.docx  dummy_fail.docx  dummy_fix.docx  fix_pdf_usage.py  gunicorn.conf.py  pyproject.toml  requirements.txt  setup_db.py  start.sh  test_api_endpoint.py  test_dxf_to_dwg.py  test_full_process.py  test_libre_env.py  test_libre_fix_async.py  test_libre_perms.py  test_libre_simple.py  test_pdf2docx.py  test_rembg.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/core/: __init__.py  audit.py  exceptions.py  file_validation.py  rate_limiter.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  base.py  donation.py  feedback.py  history.py  page_visit.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  tools.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  geoip_service.py  usage_service.py  user_service.py
backend/app/workers/: celery_app.py  cleanup.py
backend/deploy/: .env.example  deploy.sh  setup.sh
backend/migrations/: env.py
backend/migrations/versions/: add_country_fields.py  add_donations_table.py  add_feedback_table.py  (+1 more)
backend/tests/: test_libreoffice.py
(+327 files in other folders)
